Added reset and better status reporting

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -3,7 +3,7 @@
     "idf.openOcdConfigs": [
         "board/esp32c6-builtin.cfg"
     ],
-    "idf.portWin": "COM6",
+    "idf.portWin": "COM3",
     "idf.flashType": "UART",
     "files.associations": {
         "array": "cpp",
@@ -77,5 +77,6 @@
     },
     "idf.espIdfPathWin": "C:\\Users\\gurux\\esp\\v5.5\\esp-idf",
     "idf.toolsPathWin": "C:\\Users\\gurux\\.espressif",
-    "idf.pythonInstallPath": "C:\\Users\\gurux\\.espressif\\tools\\idf-python\\3.11.2\\python.exe"
+    "idf.pythonInstallPath": "C:\\Users\\gurux\\.espressif\\tools\\idf-python\\3.11.2\\python.exe",
+    "idf.currentSetup": "C:\\Users\\gurux\\esp\\v5.5\\esp-idf"
 }
